# mesh-tester

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TASKS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  web_main.py
config/: mosquitto.conf  test_config.yaml
docs/superpowers/plans/: 2026-04-10-mesh-tester.md  2026-06-21-serial-backend.md
docs/superpowers/specs/: 2026-06-21-serial-backend-design.md
src/: config.py  mqtt_injector.py  node_factory.py  recorder.py  serial_ports.py  traffic_generator.py  virtual_node.py  zone.py
src/backends/: base.py  serial.py  virtual.py
src/tui/: app.py
src/tui/widgets/: message_log.py  node_detail.py  node_table.py  scenario_panel.py  status_bar.py  zone_picker.py
src/web/: app.py
src/web/static/: index.html
tests/: test_backends_base.py  test_backends_serial.py  test_backends_virtual.py  test_config.py  test_main.py  test_main_v2.py  test_mqtt_injector.py  test_mqtt_injector_multi.py  test_node_factory.py  test_recorder.py  test_serial_ports.py  test_traffic_generator.py  test_tui_app.py  test_tui_v2.py  test_tui_widgets.py  test_virtual_node.py  test_web_api.py  test_web_serial_api.py  test_zone.py
