[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-tester"
version = "0.1.0"
description = "Virtual-node Meshtastic traffic injector via MQTT"
requires-python = ">=3.11"
dependencies = [
    "meshtastic>=2.3.0",
    "paho-mqtt>=2.0.0",
    "PyYAML>=6.0",
    "textual>=0.50.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
mesh-tester = "main:main"
mesh-tester-web = "web_main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
